--- a/app/global.css
+++ b/app/global.css
@@ -184,3 +184,10 @@ table {
   left: 0;
   right: 0;
 }
+
+nav {
+  background-color: rgb(255 255 255 / 0.5);
+  border-radius: 9999px;
+  align-items: center;
+  -webkit-box-align: center;
+}
